manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: generic-app
spec:
  selector:
    app: generic-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: webserver
  type: ClusterIP
